--- a/app/src/main/res/layout/activity_model.xml
+++ b/app/src/main/res/layout/activity_model.xml
@@ -6,11 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".views.ModelActivity">
 
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/orange"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="?homeAsUpIndicator"
+        app:navigationIconTint="@color/white"
+        app:title="Find pet's breed"
+        app:titleCentered="true" app:titleTextAppearance="@style/ToolbarTitleText"/>
+
     <Button
         android:id="@+id/Camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Camera"
+        android:textColor="@color/orange"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/recommend"
         app:layout_constraintHorizontal_bias="0.5"
@@ -35,6 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="gallery"
+        android:textColor="@color/orange"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -45,7 +58,9 @@
         android:id="@+id/recommend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Recommend"
+        android:text="find"
+        android:backgroundTint="@color/orange"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/gallery"
         app:layout_constraintHorizontal_bias="0.5"
